org settings: Fix issue, loading spinners are not visible.
In org settings, loading spinners are not visible, currently
because their size is very small.

Fix this, by increasing width and height of spinners and
adding spinner text, to make spinners more visible.
Fixes #8502

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -2022,8 +2022,8 @@ div.floating_recipient {
 }
 
 .settings-section .loading_indicator_spinner {
-    width: 20%;
-    height: 20px;
+    width: 30%;
+    height: 30px;
     margin-top: 7px;
     vertical-align: middle;
     display: inline-block;
